# holodeque

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: array_deque.rs  lib.rs  meta.rs  slice_deque.rs
